--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -128,7 +128,7 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, Return, exec, wezterm
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, M, exit, 
 bind = $mainMod, E, exec, dolphin
