udpate zshrc waybar nvim config

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -23,7 +23,9 @@ monitor=HDMI-A-1,1920*1080@144, 0x0, 1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & mako & hyprpaper & mpd
+exec-once = mpd
+exec-once = eww
+exec-once = waybar & mako & hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
