--- a/dot_config/hypr/hyprpaper.conf
+++ b/dot_config/hypr/hyprpaper.conf
@@ -1,5 +1,14 @@
 ipc = on
 
-preload = ~/WallPapers/1.jpg
+preload = ~/WallPapers/1.png
+preload = ~/WallPapers/2.png
+preload = ~/WallPapers/3.png
+preload = ~/WallPapers/4.png
+preload = ~/WallPapers/5.png
+preload = ~/WallPapers/6.png
+preload = ~/WallPapers/7.png
+preload = ~/WallPapers/8.png
+preload = ~/WallPapers/9.png
+preload = ~/WallPapers/10.png
 
-wallpaper = ,~/WallPapers/1.jpg
+wallpaper = ,~/WallPapers/1.png
