--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -23,9 +23,10 @@ monitor=HDMI-A-1,1920*1080@144, 0x0, 1
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-exec-once = mpd
-exec-once = eww
-exec-once = waybar & mako & hyprpaper
+exec-once = mpd & hyprpaper
+exec-once = wallpaper
+exec-once = fcitx5 --replace -d
+exec-once = waybar & mako
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -124,21 +125,25 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
+# windowrulev2 = float, title:Alacritty
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, wezterm
+bind = $mainMod, Return, exec, alacritty
 bind = $mainMod, Q, killactive, 
 bind = $mainMod SHIFT, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
+# bind = $mainMod, R, exec, rofi -show-icons drun
+bind = $mainMod, R, exec, rofi -combi-modi window,drun,ssh -show drun -icon-theme "Papirus" -show-icons
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, S, togglegroup
 bind = $mainMod, F11, fullscreen,
+bind = $mainMod, W, exec, waybar
+bind = $mainMod SHIFT, W, exec, killall waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
